--- a/MarketplaceViewXML/app/build.gradle
+++ b/MarketplaceViewXML/app/build.gradle
@@ -1,16 +1,17 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
     namespace 'com.tirexmurina.marketplaceviewxml'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.tirexmurina.marketplaceviewxml"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -24,11 +25,14 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
+    }
+    buildFeatures{
+        viewBinding true
     }
 }
 
@@ -41,4 +45,15 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation "androidx.navigation:navigation-fragment-ktx:2.7.6"
+    implementation "androidx.navigation:navigation-ui-ktx:2.7.6"
+
+    implementation "androidx.cardview:cardview:1.0.0"
+
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    implementation "ru.tinkoff.scrollingpagerindicator:scrollingpagerindicator:1.2.5"
+
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
 }
